Mon Jun 25 11:34:36 CDT 2007  Ciju John  <johnc@ociweb.com>

	* CIAO version 0.5.9 released.

Mon Jun 25 16:16:17 UTC 2007  Ciju John  <johnc at ociweb dot com>

        * NEWS:
          NEWS summary contributions from Gan Deng.

Fri Jun 22 14:58:53 UTC 2007  Ciju John  <johnc at ociweb dot com>

        * ChangeLog:
        * PROBLEM-REPORT-FORM:
        * VERSION:
        * ciao/Version.h:
	  Revert to x.5.8 status.

Wed Jun  6 20:00:19 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>

        * examples/Null_Component/plan.h

          Fixed Sun C++ on Salaris 10 linkage warning regarding
          extern "C" and extern "C++" mismatch.

Wed Jun  6 16:52:46 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>

        * ciaosvcs/Events/CIAO_RTEC/CIAO_RTEvent.cpp

          Fixed a type conversion warning on the
          WinXP_VC71_NET_Dynamic_Debug build.

Wed Jun  6 02:04:42 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>

        * ciaosvcs/Events/CIAO_RTEC/SimpleAddressServer.cpp:

          Update the name of the test enum value to match the idl.

Tue May 29 21:02:08 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>

        * ciaosvcs/Events/CIAO_RTEC/SimpleAddressServer.h:
        * ciaosvcs/Events/CIAO_RTEC/SimpleAddressServer.cpp:

          Added code to support the new IPv4/IPv6 capable address server.

Sun May 27 16:20:10 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * ciao/Object_Set_T.cpp:

          Enhanced exception safety of this class. Look at BUG ID 2725 for
          details.

Thu May 24 14:52:18 UTC 2007    <dengg@blade23.isislab.vanderbilt.edu>

        * DAnCE/Plan_Launcher/Plan_Launcher_Benchmark_Impl.cpp

          Reverted a change which was accidentally checked in.

Wed May 23 20:01:49 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>

        * DAnCE/Deployment/NodeApp_CB_Impl.cpp:
        * DAnCE/Deployment/NodeApp_CB_Impl.h:
        * DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.cpp: