@@ -1,6 +1,15 @@
+Wed Jun 27 01:55:29 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>
+
+        * CIDLC/AttributeHeaderEmitters.cpp:
+        * CIDLC/ExecImplHeaderGenerator.cpp:
+        * CIDLC/ExecImplSourceGenerator.cpp:
+        * CIDLC/OperationHeaderEmitters.cpp:
+
+          Enhance the layout of CIDLC generated code. This fixes bugilla 2949.
+
 Mon Jun 25 11:34:36 CDT 2007  Ciju John  <johnc@ociweb.com>
 
-	* CIAO version 0.5.9 released.
+        * CIAO version 0.5.9 released.
 
 Mon Jun 25 16:16:17 UTC 2007  Ciju John  <johnc at ociweb dot com>
 
@@ -13,7 +22,7 @@ Fri Jun 22 14:58:53 UTC 2007  Ciju John  <johnc at ociweb dot com>
         * PROBLEM-REPORT-FORM:
         * VERSION:
         * ciao/Version.h:
-	  Revert to x.5.8 status.
+          Revert to x.5.8 status.
 
 Wed Jun  6 20:00:19 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>
 
